include $(top_srcdir)/Makefile.common

EXTRA_DIST = \
	itpp_acml_tests.sln \
	array_test.vcproj \
	bch_test.vcproj \
	bessel_test.vcproj \
	blas_test.vcproj \
	channel_test.vcproj \
	cholesky_test.vcproj \
	circular_buffer_test.vcproj \
	commfunc_test.vcproj \
	convcode_test.vcproj \
	converters_test.vcproj \
	det_test.vcproj \
	eigen_test.vcproj \
	error_count_test.vcproj \
	fastica_test.vcproj \
	fastmath_test.vcproj \
	filter_design_test.vcproj \
	filter_test.vcproj \
	fix_test.vcproj \
	freq_filt_test.vcproj \
	galois_test.vcproj \
	gf2mat_test.vcproj \
	histogram_test.vcproj \
	integration_test.vcproj \
	interleaver_test.vcproj \
	inv_test.vcproj \
	itfile_test.vcproj \
	ldpc_test.vcproj \
	llr_test.vcproj \
	ls_solve_test.vcproj \
	lu_test.vcproj \
	matfunc_test.vcproj \
	mat_test.vcproj \
	modulator_nd_test.vcproj \
	modulator_test.vcproj \
	newton_search_test.vcproj \
	parser_test.vcproj \
	poly_test.vcproj \
	pulse_shape_test.vcproj \
	qr_test.vcproj \
	rand_test.vcproj \
	rec_syst_conv_code_test.vcproj \
	reedsolomon_test.vcproj \
	schur_test.vcproj \
	sigfun_test.vcproj \
	sort_test.vcproj \
	source_test.vcproj \
	sparse_test.vcproj \
	specmat_test.vcproj \
	stat_test.vcproj \
	svd_test.vcproj \
	timer_test.vcproj \
	transforms_test.vcproj \
	turbo_test.vcproj \
	vec_test.vcproj \
	window_test.vcproj

