include $(top_srcdir)/Makefile.common

cpp_sources = bpsk.cpp convcode.cpp interleaver.cpp qpsk_simulation.cpp \
	rayleigh.cpp read_it_file.cpp reedsolomon.cpp spread.cpp timer.cpp \
	vector_and_matrix.cpp write_it_file.cpp

ref_sources = bpsk.ref convcode.ref interleaver.ref qpsk_simulation.ref \
	rayleigh.ref read_it_file.ref reedsolomon.ref spread.ref timer.ref \
	vector_and_matrix.ref write_it_file.ref

it_sources = it_file_test.it

EXTRA_DIST = $(cpp_sources) $(ref_sources) $(it_sources)

